[project]
name = "django-lead-capture"
version = "0.1.0"
description = "Django app for creating AI-powered lead capture and coming soon pages"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "SimpleCTO", email = "github+django_lead_capture@simplecto.com"}
]
keywords = ["django", "lead-capture", "coming-soon", "landing-page", "ai", "litellm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

dependencies = [
    "Django>=4.2",
    "django-solo>=2.0",
    "litellm>=1.0",
    "django-bootstrap5>=24.0",
]

[project.urls]
Homepage = "https://github.com/heysamtexas/django-lead-capture"
Repository = "https://github.com/heysamtexas/django-lead-capture"
Issues = "https://github.com/heysamtexas/django-lead-capture/issues"
Changelog = "https://github.com/heysamtexas/django-lead-capture/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/django_lead_capture"]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "DJ"]
ignore = ["DJ01"]  # null=True in CharField is fine for Django

[tool.coverage.run]
source = ["django_lead_capture"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
